deploy/app/sematic-cache/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sematic-cache
spec:
  type: LoadBalancer
  selector:
    app: sematic-cache
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy
spec:
  type: ExternalName
  externalName: nginx.infra.svc.cluster.local
  ports:
    - port: 80
