deploy/app/sematic-cache/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sematic-cache-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: sematic.127.0.0.1.nip.io
      http:
        paths:
          - path: /web(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-proxy
                port:
                  number: 80
          - path: /semantic-cache(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: sematic-cache
                port:
                  number: 8080
    - host: localhost
      http:
        paths:
          - path: /web(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-proxy
                port:
                  number: 80
          - path: /semantic-cache(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: sematic-cache
                port:
                  number: 8080
